fix: correct three defects in the range counting kernel and its formula
All three were introduced by the two commits that replaced the
JoinFormula/DisentangleFormula pair, and none was caught by the functional
suite that reported green over them.

A `short` counter silently dropped a valid record. The invariant claimed the
final signed count is bounded by the ranges one record holds *in one chunk*,
but a chunk partitions record IDS and a record has exactly one id, so every
range it holds scatters into that one chunk and the qualifier bounds nothing.
What does bound it is the operand count: a Bitmap is a set, so one id is
scattered at most once per operand and the final difference lies in
[-minus.length, +plus.length]. `compute` now selects the counter width once
per computation on `plus.length + minus.length <= Short.MAX_VALUE`; above it
an `int` sibling runs. Witness, through the public API with contract-valid
ranges: 32,768 ranges for record 7, all containing 0, returned [] where [7] is
correct.

A reversed `attributeBetween` window raised GenericEvitaInternalError. The
bound order is validated nowhere upstream - neither AttributeBetween#isApplicable
nor DateTimeRange#between orders the pair - and the scalar branch builds
`value >= from && value <= to`, which is unsatisfiable when inverted and so
already answers empty. The indexed range path now agrees with it instead of
failing the query.

RangeCountFormula#getCostInternal returned the raw operand size, dropping the
x1462 operation-cost multiplier every sibling applies. Since
AbstractFormula#getCostToPerformanceInternal divides that by the result size to
rank cache entries, a range result was priced three orders of magnitude below
every other formula type and effectively barred from the cache. OrFormula, the
sibling bitmap-carrying formula, applies the factor for the same reason.

RangeCountKernel's class javadoc gains a walkthrough of how the output is
actually produced - the chunk/scatter/emit cycle and a worke